--- a/KCWI_script/ASTRO_P&S.ipynb
+++ b/KCWI_script/ASTRO_P&S.ipynb
@@ -464,6 +464,189 @@
     "plt.savefig(dic+'P_outAGN_vs_L_AGN.png',dpi=300)\n",
     "# plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Radio-excess Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import astropy.units as u\n",
+    "import astropy.constants as const"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "calculate the observed wavelength"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8565.498800000001 um 1998.6163866666668 um 706653.6510000001 um\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu_VLA=35*u.GHz\n",
+    "mu_ALMA=150*u.GHz\n",
+    "mu_14=1.4*u.GHz/3.3\n",
+    "\n",
+    "\n",
+    "lamda_VLA=(const.c/mu_VLA).to(u.um)\n",
+    "lamda_ALMA=(const.c/mu_ALMA).to(u.um)\n",
+    "lamda_14=(const.c/mu_14).to(u.um)\n",
+    "print(lamda_VLA,lamda_ALMA,lamda_14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the upper limit is:\n",
+    "\n",
+    "$f_{8565}=0.05046032$mJy\n",
+    "\n",
+    "$f_{1998}=0.01629476$mJy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.904735410434706e-16"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L_IR=(8e11+2.4e12)*u.L_sun\n",
+    "D_L=18773.8*u.Mpc\n",
+    "f=L_IR/(4*np.pi*(D_L**2))\n",
+    "f=f.to(u.W/(u.m**2)).value\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0000000000000001e-29"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flux_density=1e-3*u.jansky\n",
+    "flux_density=flux_density.to(u.W/(u.Hz*(u.m**2))).value\n",
+    "flux_density"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8890753113320115"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log10((f/3.75e12)/flux_density)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "calculate uncertainty of q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2854745992629486"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma_s_ir=np.sqrt((1.2**2)+(21**2))\n",
+    "sigma_s_ir=sigma_s_ir*1e11*u.L_sun/(4*np.pi*(D_L**2))\n",
+    "sigma_s_ir=sigma_s_ir.to(u.W/(u.m**2)).value\n",
+    "sigma_14=(3.44e-6*u.jansky).to(u.W/(u.Hz*(u.m**2))).value\n",
+    "\n",
+    "\n",
+    "sigma_s_ir=sigma_s_ir/f\n",
+    "sigma_s_14=sigma_14/flux_density\n",
+    "sigma_q=(1/np.log(10))*np.sqrt((sigma_s_ir**2)+(sigma_s_14**2))\n",
+    "sigma_q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42424242424242425"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1.4/3.3"
+   ]
   }
  ],
  "metadata": {
