--- a/KCWI_script/map_generator.ipynb
+++ b/KCWI_script/map_generator.ipynb
@@ -50,26 +50,26 @@
       "WARNING: Could not parse unit FLAM16 [spectral_cube.cube_utils]\n",
       "WARNING: VerifyWarning: Invalid 'BLANK' keyword in header.  The 'BLANK' keyword is only applicable to integer data, and will be ignored in this HDU. [astropy.io.fits.hdu.image]\n",
       "WARNING: Could not parse unit FLAM16 [spectral_cube.cube_utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
       "  np.nansum(data, axis=axis))\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
       "  np.nansum(data, axis=axis))\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:179: RuntimeWarning: invalid value encountered in true_divide\n",
       "  np.nansum(data, axis=axis))\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
       "  np.nansum(data, axis=axis))\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
@@ -78,13 +78,13 @@
       "  np.nansum(data, axis=axis))\n",
       "/usr/local/lib/python3.7/site-packages/astropy/units/quantity.py:464: RuntimeWarning: invalid value encountered in power\n",
       "  result = super().__array_ufunc__(function, method, *arrays, **kwargs)\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
       "  np.nansum(data, axis=axis))\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12564e048>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x1241820d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
