--- a/paper/ApJtemplate/sections/Observations.tex
+++ b/paper/ApJtemplate/sections/Observations.tex
@@ -1,11 +1,14 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-	In this section, we provide details on the KCWI instrument configurations, observations,data reduction pipeline, and post-processing after standard reduction pipeline
 \subsection{KCWI Instrument Configuration}
-Keck Cosmic Web Imager(KCWI) is a general purpose, optical IFS that has been installed on the 10m Keck II telescope. KCWI provides seeing-limited imaging from the wavelength of $3500 \AA - 5700 \AA$, and the spectral resolution can be configured from R=1000 to R=20000. The field of view is $20'' \times 33''$ for large slicer, $16'' \times 20''$ for medium slicer and $8'' \times 20''$ for the small slicer. KCWI is optimal for a survey of gasous nebulae at $z \approx 2$ because: (1) KCWI has a high throughput from $3800 \AA - 4500 \AA$,optimal for probing ly$\alpha$ CIV and HeII lines at $z \approx 2$. (2) KCWI has a high spectral-resolution modes(R>4000) which can resolve the gas kinematics and (3) KCWI has a relatively large field-of-view(FoV) to cover extended ly$\alpha$ nebulae. Futhermore, KCWI nicely complements the characteristics of MUSE which thrives at $\lambda> 5000 \AA$. Data was taken with the Keck/KCWI instrument in November 2017. The seeing varied in the range of 0.7-1.1 arcsec.
+In this section, we provide details on the observation and KCWI instrument configurations. We obtained IFU spectroscopy of BOSS1441 on UT-20180518 with KCWI on Keck-II. The large slicer, with Field of View (FoV) of $\rm 20\arcsec \times 33\arcsec$, was employed for this observation which has the spatial resolution of $\rm \approx 1.35\arcsec$. We choose this slicer because it possesses the largest FoV to cover MAMMOTH-1 as widely as possible. We also employed blue BL1 grating centered at $\rm \lambda=4500$ \AA, which gives a usable wavelength coverage of $\rm 3500-5600$ \AA, and is an excellent regime to perform studies of Ly$\rm \alpha$ nebula at $\rm z\approx 2.3$. This configuration yields a slit-limited spectral resolution of $\rm R \approx 1000$ (rest-frame 300 km/s) which is high enough to fully resolve the kinematics of MAMMOTH-1. The total on-source exposure time is 4 hours conducted with two pointings, we integrated for 2 hours consisting of 6 exposures of 20 min for each pointing. This exposure time allows us to reach a surface brightness equals to $\rm 7\times 10^{-19}\rm erg \ s^{-1} \ cm^{-2} \ arcsec^{-2}$. We didn't apply nod-and-shuffle, instead we interleaved observation for a nearby patch of sky ($\rm \Delta RA=+2\arcmin$,$\rm \Delta DEC=+1\arcmin$) for 4 hours to later perform sky subtraction, a standard star was also observed for flux calibration purposes.
 
-The KCWI observations of BOSS1441 were carried out on UT 2018 May, seeing varied in the range of 0.7-1.1 arcsec(FWHM of the Gaussian at $\approx 4000$, measured in thee combined 40 min datacubes). For our program, we configured KCWI with thee BM grating and medium slicer which yields a Field of View(FoV) of 16.8" perpendicular to slicer(24 slicers) and 20" along the slicer. This FoV is sufficient to map the gas around quasar host halo to a radius of $\approx$100kpc at $z \approx 2.3$. This setting can provide a spatial sampling of $\frac{20"}{24 slicers} \approx 0.67"$ along the slicer and is seeing-limited perpendicular to the slicer. The spectral resl=olution is R=4000. we observed at central wavelengths ranging from $\lambda =3900-4100$ to conver the Ly$\alpha$ emission of each quasar in the sample.
-
-The total exposure time for BOSS1441 is 40 minutes which consists of four 10-min individual exposures. 
+\subsection{Data Reduction}
+The data was reduced using the XXX pipeline. In this process, we first subtracted bias, corrected the variation by dividing the flat-field images from each raw image, removed cosmic-rays and created error images. Then we did geometric transformation and wavelength calibration. Finally we calibrated flux for each image with the spectrophotometric standard star. With all of these done, $\sigma$ clipping was performed for each sky cube by masking pixels with value $3\sigma$ above the median, then we used the masked cube to estimate the sky channel-by-channel and subtracted it from the reduced data cube. 
+ 
+ \subsection{3D mask construction}
+ The final step is to construct the three-dimensional segmentation mask (3D mask) in order to obtain the low-dimensional projections of the extracted sources, such as optimally-extracted images and flux-weighted-moment map, for further analysis. We produce the 3D mask based on the user-defined signal-to-noise ratio (SNR) threshold, pixels in data cube with value lower than the threshold are masked which means the value of the corresponding pixels in 3D mask is 0, otherwise 1.  Because this process is based on the SNR threshold, the estimation of the background noise is an essential aspect. This noise is estimated under the assumption that background noise of each wavelength layer in the data cube shares the same value. This assumption allows us to calculate the standard deviation with parts of the data cube which don't contain the emission and absorption components and apply it to the whole data cube. The SNR threshold is set to be $\rm 2\sigma$ which typically corresponds to a flux density of $\rm 10^{-18} erg \ s^{-1} \ cm^{-2}$ \AA$^{-1}$.
+ 
+ After this preliminary work, we find widely extended HeII and CIV emission and an extremely powerful outflow reaching hundreds of kiloparcsec which is never seen before at high redshift. In Sec. \ref{sec:results} we show our results to confirm this outflow and in Sec. \ref{sec:discussion} we give detailed discussion.
 \end{document}
