--- a/paper/ApJtemplate/sections/results_sections/kinematics.tex
+++ b/paper/ApJtemplate/sections/results_sections/kinematics.tex
@@ -1,7 +1,16 @@
 \documentclass[../Results.tex]{subfiles}
 
 \begin{document}
-	In this section we present maps of the flux-weighted velocity centroid and the flux-weighted velocity dispersion for the three emission line to get an indication of the centroid velocity and width of the emission line for each spatial location. Different emission line traces different gas component. We use ly$\alpha$ to trace cool gas($10^{4}$K) and use CIV($\lambda1549$),HeII($\lambda1640$) emission to trace warm gas($10^{5}$K).  These resolved kinematic maps give us the opportunity to the kinematic structure of this area, evidence for rotation, inflows or outflows and help us to have a deep insight look to the physics of this nebula. We filter the spectra with lowpass filter to reduce the noise, this procedure can help us to construct a more clear velocity and velocity dispersion map, we show the results in Fig. \ref{kinematicsmap}
+In this section we present the maps for flux-weighted velocity and flux-weighted dispersion of Ly$\rm \alpha$, HeII and CIV emissions produced with the 3D mask to get an indication of kinematic patterns. We note that Ly$\rm \alpha$ resonant scattering effect doesn't play an important role on kinematics seen in the central area because it tends to disrupt the coherency of kinematics instead of enhancing it \citep{Cantalupo2005Fluorescent}, this is also confirmed by the results of HeII and CIV emissions.
+
+Fig. \ref{kinematicsmap} shows the two moment maps together with the optimally-extracted images of the three emissions. The optimally-extracted images in left panel clearly shows the projected physical scale of Ly$\rm \alpha$ emission extends to 175 kpc which approximates the typical size of dark matter halo at this redshift. This projected scale is smaller comparing to the results of \citet{cai2017discovery} due to small FoV ($\rm 20\arcsec \times 33\arcsec$) of KCWI. In addition, HeII and CIV emission also extends to tens of kiloparcsec surpassing the typical size of galaxies, especially CIV emission which extends to 88 kpc. This spatially widely extended metal emissions are rarely seen at high redshift with such large projected scale.
+
+In the middle and right panel we present the maps of first and second moment of flux distribution. The middle panel represents the flux-weighted centroid velocity maps, it shows that the velocity gradients are evident in the three maps with same direction from the northwest to the southeast. This kinematic pattern is usually the indication of rotating gas disk in CGM or outflow ejected from central AGN. Besides, the velocity map of Ly$\rm \alpha$ emission also shows gradient around G-5 from northeast to southwest.  The velocity dispersion map of Ly$\rm \alpha$ emission shows that the area around source-B possesses larger velocity dispersion ($\rm \sigma_{v} > 400 \ km/s$) and extends to $\rm 100 \ kpc$, dispersion even larger than 650 km/s which corresponds to FWHM of 1550 km/s in some spatial positions. Following the same method in \citet{Arrigoni_Battaia_2018} the expected velocity dispersion calculated for a dark matter halo hosting quasars is 300 km/s with the results $\rm M_{DM} \approx 10^{15.2} \ M_{\odot}$ in \citet{arrigoni2018overdensity} where $M_{DM}$ is the mass of dark matter halo. The significant comparison between expected dispersion and our results may indicate that there is extremely powerful kinematic activity in this region which is impossibly caused by rotation or inflow.
+
+Fig. \ref{slices} shows the channel map of Ly$\rm \alpha$ emission with step of 200 km/s. It is clearly seen that the red component and blue component are on either side of source-B. Besides, We also extract the spectra which are normalized and fitted with one-component gaussian function of different spatial positions from circular aperture with radius of $\rm 1.5 \arcsec$ and show it in Fig. \ref{spectralss}. No significant symmetric doublets existing in the spectra confirms that the resonant scattering effect is negligible. 
+
+Based on the above analysis, we rule out the possibility that the kinematic pattern is result from rotating gas disk, inflow and resonant scattering effect of Ly$\rm \alpha$ emission. Together with the existing of extended HeII CIV and OIII emission \citep{cai2017discovery}, the most natural and straightforward interpretation is that there is extremely powerful and widely influenced outflow ejected from source-B which has the ability to influence the entire gas environment in dark matter halo hosting source-B. The large-scale feedback effect has been widely reported before, however these observations mainly focus on the central galaxies of low redshift clusters and they are mostly powered by jet with significant radio signal. So, the halo-scale-influenced outflow with no strong radio signal at high redshift makes our observation extremely unique. So understanding the mechanism powering this strong outflow in our observation is essential for feedback effect on galaxy evolution.  
+
 	 \begin{figure*}[htp]
 		\centering
 		\includegraphics[width=\textwidth]{figs/emissionmap}
@@ -9,18 +18,13 @@
 		\caption{Left: continuum-subtracted psudo-narrow band images for the 3 emissions. We select regions $> 1.5\sigma$ in each slice and stack these slices together. The contour represent signal-to-noise ratio(SNR), for ly$\alpha$ is ($5\sigma,9\sigma,18\sigma,30\sigma,42\sigma,51\sigma$), for HeII is ($3\sigma,5,9\sigma$) and for CIV is ($4\sigma,7\sigma,9\sigma$). Middle: flux-weighted velocity map with respect to the systemic redshift of MAMMOTH-1. Right: flux-weighted velocity dispersion also with respect to systemic redshift of MAMMOTH-1. We also mark sources in the field with cross.}
 	\end{figure*}
 	
-	Left panel is the continuum-subtracted, pseudo-narrowband image, contours represent the SNR levels. Middle panel shows velocity maps and right panel is velocity dispersion map. It is clear that all of the three velocity map show velocity gradient around Source-B and along the same direction, besides, Ly$\alpha$ emission also presents a extended region around Source-B with dispersion larger($\sigma \approx 600km/s$) than other places. With all of these evidence(extent CIV and HeII emission, clear velocity gradient and large velocity dispersion, also the OIII emission\cite{cai2017discovery}), we think Source-B produces outflow and injects matter and energy into CGM. What is interesting is that the velocity of outflow is still large enough $\approx 500$km/s in a large distance($\approx 100$kpc). Because Source-B is radio quiet, this outflow cannot be driven by jet from AGN, AGN-radiation-driven feedback and star-forming-driven feedback are possible. This may be the first observation for the outflow influence on such large scale at high redshift. In addition, it is also clear seen that velocity map shows velocity gradient around G-5, direction of this velocity gradient is parallel to the connection of the two peaks on each side of G-5, dispersion around G-5 also shows a large value comparing with other regions, these evidences may indicate G-5 also produces outflow.
-	
-	 To have a deep insight, we bin the data cube with interval length of 200km/s and show the results in Fig. \ref{slices}. It shows significant separate red and blue component on either side of source-B. So does G-5, but the signal is relatively weaker than Source-B instead.
 	\begin{figure*}[htp]
 		\centering
 		\includegraphics[width=\textwidth]{figs/slices}
 		\label{slices}
-		\caption{Kinematics of cool gas. It shows signal of ly$\alpha$ emission at different veliocities. We select $\Delta v=187$km/s which corresponds 4$A$  as the bin size of these slices. We extract these slices within the range $4000A-4040A$, for each image here, we use the mean velocity of the bin as title for each image. It shows significant red and blue component on either side of source-B.}
+		\caption{Kinematics of cool gas. It shows signal of ly$\alpha$ emission at different velocities. We select $\Delta v=187$km/s which corresponds 4$A$  as the bin size of these slices. We extract these slices within the range $4000A-4040A$, for each image here, we use the mean velocity of the bin as title for each image. It shows significant red and blue component on either side of source-B.}
 	\end{figure*}
 	
-	To further explore the physical mechanism here, we extract spectra from different regions of ly$\alpha$ nebula and construct a "spectral map", Fig.\ref{specmap} shows the result. We construct aperture with radius of 1$arcsec^{2}$ and extract spectra from different part of Ly$\alpha$ neubulae. We also fit lines with one-component gaussian function and show the fitting parameter in Tab. \ref{fitpara}. We clearly see in some regions close to source-B the dispersion is really large even $>600$km/s which corresponds to FWHM$>1400$km/s. It's hard to imagine anything other than an outflow could cause such a large dispersion.
-%	We number 2''$\times$2'' windows from 0 to 19 and extract spectra, these emission lines are fitted with multi-component gaussian function. \ref{fig:specmap} mainly provide us with five pieces of information. (i) we do see multi-component ly$\alpha$ emission line in some areas(window 8,12). (ii) In some area(window 10,11) there's only one component but the velocity dispersion $\approx 500 km/s$ which corresponds to FWHM ~ 1200 km/s. 
 	\begin{figure*}[htp]
 		\centering
 		\includegraphics[width=0.5\textwidth]{figs/apertmap.png}
