update paper, sec. 3.1

--- a/KCWI_script/ASTRO_P&S.ipynb
+++ b/KCWI_script/ASTRO_P&S.ipynb
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -583,13 +583,37 @@
        "0.8890753113320115"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.log10((f/3.75e12)/flux_density)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$0.12276521 \\; \\mathrm{mJy}$"
+      ],
+      "text/plain": [
+       "<Quantity 0.12276521 mJy>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f14_low=((f/3.75e12)/np.power(10,1.8))*u.W/(u.Hz*(u.m**2))\n",
+    "f14_low.to(u.mJy)"
    ]
   },
   {
