--- a/paper/ApJtemplate/template.bib
+++ b/paper/ApJtemplate/template.bib
@@ -446,6 +446,19 @@
   pages={A59},
   year={2013},
   publisher={EDP Sciences}}
+  @article{Toba_2019,
+   title={A Wide and Deep Exploration of Radio Galaxies with Subaru HSC (WERGS). II. Physical Properties Derived from the SED Fitting with Optical, Infrared, and Radio Data},
+   volume={243},
+   ISSN={1538-4365},
+   url={http://dx.doi.org/10.3847/1538-4365/ab238d},
+   DOI={10.3847/1538-4365/ab238d},
+   number={1},
+   journal={The Astrophysical Journal Supplement Series},
+   publisher={American Astronomical Society},
+   author={Toba, Yoshiki and Yamashita, Takuji and Nagao, Tohru and Wang, Wei-Hao and Ueda, Yoshihiro and Ichikawa, Kohei and Kawaguchi, Toshihiro and Akiyama, Masayuki and Hsieh, Bau-Ching and Kajisawa, Masaru and et al.},
+   year={2019},
+   month={Jul},
+   pages={15}}
   @article{borisova2016ubiquitous,
   title={Ubiquitous Giant Ly$\alpha$ Nebulae around the Brightest Quasars at z~ 3.5 Revealed with MUSE},
   author={Borisova, Elena and Cantalupo, Sebastiano and Lilly, Simon J and Marino, Raffaella A and Gallego, Sofia G and Bacon, Roland and Blaizot, Jeremy and Bouch{\'e}, Nicolas and Brinchmann, Jarle and Carollo, C Marcella and others},
