--- a/paper/ApJtemplate/template.tex
+++ b/paper/ApJtemplate/template.tex
@@ -13,13 +13,17 @@
 
 
 %% AUTHOR/INSTITUTIONS FOR AASTEX6.1:
-\author{Shiwu Zhang}
-\affiliation{Department of Astronomy, Tsinghua University,
-              Shuangqing Road No.30, Haidian Beijing China}
 
-\author{Zheng Cai}
-\affiliation{Department of Astronomy, Tsinghua University,
-              Shuangqing Road No.30, Haidian Beijing China}
+
+%\author{Shiwu Zhang}
+%\affiliation{Department of Astronomy, Tsinghua University,
+%              Shuangqing Road No.30, Haidian Beijing China}
+%
+%\author{Zheng Cai}
+%\affiliation{Department of Astronomy, Tsinghua University,
+%              Shuangqing Road No.30, Haidian Beijing China}
+
+
 %% AUTHOR/INSTITUTIONS FOR EMULATE APJ:
 % \author{Patricio~E.~Cubillos\altaffilmark{1,2},
 % Joseph~Harrington\altaffilmark{1},
