update paper, sec. 3.1, fig. 1 and introduction

--- a/paper/ApJtemplate/sections/results_sections/radio.tex
+++ b/paper/ApJtemplate/sections/results_sections/radio.tex
@@ -6,7 +6,7 @@
 	\begin{figure}[htp]
 		\centering
 		\includegraphics[width=\columnwidth]{figs/SED_fitting}
-		\caption{aa}
+		\caption{SED for source-B powering ELAN MAMMOTH-1. The data points are from \citet{cai2017discovery} (blue), ALLWISE source catalog, SCUBA-2 data \citep{arrigoni2018overdensity} (magenta), ALMA and VLA continuum images \citep{emonts2019cold} (dark red) and FIRST catalog (green). Gray lines and points are SEDs and flux density at 1.4 GHz for radio excess galaxies from \citet{harrison2014kiloparsec}. The brown dashed line is the average template of 1056 radio galaxies at redsfhits from 0.0028 to 1.7 \citep{Toba_2019}. All of this data are normalized and shifted to z=2.3.}
 		\label{SED}
 	\end{figure}
 	
